web/wp-content/themes/onelove/assets/scss/vc/_button.scss
body {
  .ol_button {

    &.vc_btn3-default {
      text-align: center;
    }
    .vc_btn3-style-onelove {
      border-radius: rem-calc(2);
      text-transform: uppercase;
      letter-spacing: .06875rem;
    }
    a,
    button {

      &.vc_btn3-color-default,
      &.vc_btn3-color-coral,
      &.vc_btn3-color-transparent {
        color: $white;
        &, & h4 {
          transition: all .5s ease-in-out;
          font-family: $overpass;
        }
        &:hover {
          color: $white;
        }
      }
      &.vc_btn3-color-transparent {
        background-color: transparent;
        border-color: $white;
        border-width: .125rem;
        &.vc_btn3:hover {
          background-color: $midnight;
          border-width: .125rem;
        }
      }
      &.vc_btn3-color-coral {
        background-color: $coral;
        &:hover {
          background-color: $midnight;
        }
      }
      &.vc_btn3-color-default {
        background-color: $moss;
        &:hover {
          background-color: $coral;
        }
      }
    }


    @at-root {
      body .blue,
      body .green,
      body .navy,
      .default-block-styling,
      .main-video-slide {
        .ol_button {
          .vc_btn3-color-default {
            background-color: $white;
            h4 {
              color: $midnight;
            }
            &:hover {
              background-color: $midnight;
              h4 {
                color: $white;
              }
            }
          }
        }
        .wpcf7-submit {
          background-color: $white;
          color: $midnight;
          &:hover {
            background-color: $midnight;
            color: $white;
          }
        }
      }
      html body .navy,
      .stickies-block  {
        .ol_button .vc_btn3-color-default,
        .wpcf7-submit {
          &:hover {
            background-color: $moss;
          }
        }
      }
      .main-video-slide .ol_button.vc_btn3-default {
        text-align: left;
      }
    }
    .vc_btn3-size-default {
      min-height: 3.125rem;
      padding-left: $default-spacing;
      padding-right: $default-spacing;
      max-width: 100%;
      @include breakpoint(medium) {
        max-width: 21.875rem;
      }
      & * {
        margin: 0;
        line-height: 1;
        padding-top: 1%;
      }
    }
  }

  .ol-default-button {
    min-height: 3.125rem;
    padding: .875rem $default-spacing;
    max-width: 100%;
    @include breakpoint(medium) {
      max-width: 21.875rem;
    }
    border-radius: rem-calc(2);
    text-transform: uppercase;
    letter-spacing: .06875rem;
    background-color: $moss;
    color: $white;
    transition: all .5s ease-in-out;
    &:hover {
      background-color: $coral;
      color: $white;
    }
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    border: .0625rem solid transparent;
    box-sizing: border-box;
    word-wrap: break-word;
    user-select: none;
    top: 0;
    box-shadow: none;
    font-size: 1.0625rem;
    margin-bottom: .5rem;
  }
  #masthead li.donate-button a {

    &:hover {
      h4.head-menu-item,
      h1.mobile-head-menu-item {
        color: $white;
        background-color: $moss;
        margin-top: 0;
        margin-bottom: 0;
        border-bottom: 0;
        padding-bottom: .3125rem;
      }
    }
    h4.head-menu-item,
    h1.mobile-head-menu-item {
      color: $white;
      border-radius: rem-calc(2);
      background-color: $coral;
      padding: 9px 30px;
      transition: all .5s ease-in-out;
      box-sizing: border-box;
      word-wrap: break-word;
      user-select: none;
      text-decoration: none;

    }
  }
  .wpcf7-submit,
  input[type=button],
  [type=button], [type=submit] {
    @extend .ol-default-button;
  }
  [type=button] ~ [type=button] {
    margin-left: $default-spacing;
    margin-right: $default-spacing;
  }

  .wpcf7-form p:last-of-type {
    &:focus {
      outline: none;
    }
  }
  .hero-overlay-buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    @include breakpoint(medium) {
      flex-direction: row;
    }
    @at-root {
      body.page-template-page-home {
        div.overlay.remove-overlay .full-page-header-content >  h1.entry-title {
          margin-bottom: 36px;
          @media screen and (max-width: 479px) {
            margin-bottom: 40px;
          }
        }
        .overlay.remove-overlay .full-page-header-content {
          bottom: 63px;
        }
      }
    }
    & > * {
      display: flex;
      &:first-child {
        margin-right: 15px;
        margin-bottom: 30px;
        @include breakpoint(medium) {
          margin-bottom: 21.74px;
        }
      }
      &:last-child {
        margin-left: 15px;
      }
    }
  }
}

